--- a/history.html
+++ b/history.html
@@ -11,7 +11,7 @@
     <nav>
         <img src = "./images/logo.png" alt="My Dictionary" />
         <h1>My DICTIONARY App</h1>
-        <button id="searchButton"><a href="search.html">SEARCH</a></button>
+        <button id="searchButton"><a href="index.html">SEARCH</a></button>
     </nav>
     <div class="historyCards"></div>
     <script src="./index.js"></script>
