--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav>
         <img src = "./images/logo.png" alt="My Dictionary" />
         <h1>My DICTIONARY App</h1>
-        <button id="historyButton"><a href="history.html">HISTORY</a></button>
+        <button id="historyButton" onclick="history()"><a href="history.html">HISTORY</a></button>
     </nav>
     <section class = "search">
-        <div>
+        <div class="searchDiv">
             <img src="images/search.jpg" alt="Search..." class = "searchImage"/>
         </div>
         <div class = "searchBar">
